samples/_failures_safe/1761432749_71c3eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbea36c3.c: In function ‘main’:
./samples/SAFE/__tmp_fbea36c3.c:135:61: error: missing terminating " character
  135 |     add_log_entry(&analyzer, "2024-01-15 10:30:00", "INFO", "
      |                                                             ^
./samples/SAFE/__tmp_fbea36c3.c:135:5: error: expected expression at end of input
  135 |     add_log_entry(&analyzer, "2024-01-15 10:30:00", "INFO", "
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_fbea36c3.c:135:5: error: expected declaration or statement at end of input
